src/test/ui/error-codes/E0439.stderr
error[E0439]: invalid `simd_shuffle`, needs length: `simd_shuffle`
  --> $DIR/E0439.rs:14:5
   |
14 |     fn simd_shuffle<A,B>(a: A, b: A, c: [u32; 8]) -> B; //~ ERROR E0439
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

